added most of javascript functionality. mostly guess part of gameplay. also edited some of css.

--- a/hangman.html
+++ b/hangman.html
@@ -19,9 +19,9 @@
 
   <container id="container">
     <div id="start" display=none>
-      <button id="button1">Horror Characters</button>
-      <button id="button2">Pokemon</button>
-      <button id="button3">Mortal Kombat Characters</button>
+      <button class="buttons" id="button1">Horror Characters</button>
+      <button class="buttons" id="button2">Pokemon</button>
+      <button class="buttons" id="button3">Mortal Kombat Characters</button>
     </div>
   </container>
 
