added html and css for 'carousel'

--- a/hangman.html
+++ b/hangman.html
@@ -36,7 +36,18 @@
         </ul>
       </section>
       <section id="guessArea">
-        <img id="image" src="./6.png">
+        <div class="images-container">
+            <img class="img" src="./tumblr_inline_pg0k73U7BJ1rh6ctt_500.png">
+            <img class="img" src="./2.png">
+            <img class="img" src="./3.png">
+            <img class="img" src="./4.png">
+            <img class="img" src="./5.png">
+            <img class="img" src="./6.png">
+            <img class="img" src="./7.png">
+            <img class="img" src="./7.1.png">
+            <img class="img" src="./7.2.png">
+            <img class="img" src="./8.png">
+        </div>
         <input type="text" id="input" placeholder="Enter letter or word guess here">
         <button id="submit">Submit</button>
       </section>
