--- a/hangman.html
+++ b/hangman.html
@@ -37,17 +37,17 @@
       </section>
       <section id="guessArea">
         <div class="images-container">
-            <img class="img" src="./tumblr_inline_pg0k73U7BJ1rh6ctt_500.png">
-            <img class="img" src="./2.png">
-            <img class="img" src="./3.png">
-            <img class="img" src="./4.png">
-            <img class="img" src="./5.png">
-            <img class="img" src="./6.png">
-            <img class="img" src="./7.png">
-            <img class="img" src="./7.1.png">
-            <img class="img" src="./7.2.png">
-            <img class="img" src="./8.png">
-        </div>
+            <img class="imgg" id="img1" src="./tumblr_inline_pg0k73U7BJ1rh6ctt_500.png" display="block">
+            <img class="img" id="img2" src="./2.png" display="none">
+            <img class="img" id="img3" src="./3.png" display="none">
+            <img class="img" id="img4" src="./4.png" display="none">
+            <img class="img" id="img5" src="./5.png" display="none">
+            <img class="img" id="img6" src="./6.png" display="none">
+            <img class="img" id="img7" src="./7.png" display="none">
+            <img class="img" id="img8" src="./7.1.png" display="none">
+            <img class="img" id="img9" src="./7.2.png" display="none">
+            <img class="img" id="img10"src="./8.png" display="none">
+          </div>
         <input type="text" id="input" placeholder="Enter letter or word guess here">
         <button id="submit">Submit</button>
       </section>
