added win and lose functions

--- a/hangman.html
+++ b/hangman.html
@@ -27,10 +27,9 @@
 
   <body id="main">   
     <div id="mainScreen" style="display: none;">
-      <section>
+      <section id="listt">
         <ul id ="list">
           <li id="wins"></li>
-          <li id = "losses"></li>
           <li id = "lettersUsed"></li>
           <li id="chances"></li>
         </ul>
@@ -52,10 +51,17 @@
         <button id="submit">Submit</button>
       </section>
     </div>
+    <section id="end">
+      <h2>Would you like to play again?</h2>
+      <button id="yes">Yes</button>
+      <button id="no">No</button>
+    </section>
     <footer id="wordBlank">
       <h1 id = "blanks"></h1>
     </footer>
-    <script src="./hangman.js"></script>
+    
   </body>
 
+
+  <script src="./hangman.js"></script>
 </html>
