--- a/hangman.html
+++ b/hangman.html
@@ -48,7 +48,7 @@
             <img class="img" id="img10"src="./8.png" display="none">
           </div>
         <input type="text" id="input" placeholder="Enter letter or word guess here">
-        <button id="submit">Submit</button>
+        <p>Press Enter to submit your guess!</p>
       </section>
     </div>
     <section id="end">
