--- a/hangman.html
+++ b/hangman.html
@@ -36,16 +36,16 @@
       </section>
       <section id="guessArea">
         <div class="images-container">
-            <img class="imgg" id="img1" src="./tumblr_inline_pg0k73U7BJ1rh6ctt_500.png" display="block">
-            <img class="img" id="img2" src="./2.png" display="none">
-            <img class="img" id="img3" src="./3.png" display="none">
-            <img class="img" id="img4" src="./4.png" display="none">
-            <img class="img" id="img5" src="./5.png" display="none">
-            <img class="img" id="img6" src="./6.png" display="none">
-            <img class="img" id="img7" src="./7.png" display="none">
-            <img class="img" id="img8" src="./7.1.png" display="none">
-            <img class="img" id="img9" src="./7.2.png" display="none">
-            <img class="img" id="img10"src="./8.png" display="none">
+            <img class="imgg" id="img1" src="./images/tumblr_inline_pg0k73U7BJ1rh6ctt_500.png" display="block">
+            <img class="img" id="img2" src="./images/2.png" display="none">
+            <img class="img" id="img3" src="./images/3.png" display="none">
+            <img class="img" id="img4" src="./images/4.png" display="none">
+            <img class="img" id="img5" src="./images/5.png" display="none">
+            <img class="img" id="img6" src=".//images/6.png" display="none">
+            <img class="img" id="img7" src="./images/7.png" display="none">
+            <img class="img" id="img8" src="./images/7.1.png" display="none">
+            <img class="img" id="img9" src="./images/7.2.png" display="none">
+            <img class="img" id="img10"src="./images/8.png" display="none">
           </div>
         <input type="text" id="input" placeholder="Enter letter or word guess here">
         <p>Press Enter to submit your guess!</p>
